bk_ida/gccida/c3/dwarf2out_end_epilogue
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dwarf2out_end_epilogue/src/dwarf2out.c:2595:40: error: use of undeclared identifier 'off_684265'
sprintf( v2, "*.%s%u", ( const char *)&off_684265, current_funcdef_number); 
                                       ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dwarf2out_end_epilogue/src/obj/dwarf2out.o] Error 1
